--- a/src/main/resources/templates/Mark/list.html
+++ b/src/main/resources/templates/Mark/list.html
@@ -94,11 +94,17 @@
 
     <p>Las notas que actualmente figuran en el sistema son las siguientes:</p>
     <button type="button" id="updateButton" class="btn btn-primary">Actualizar</button>
-    <script>
-        $("#updateButton").click(function () {
-            $("#tableMarks").load('/mark/list/update');
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        $( "#updateButton" ).click(function() {
+        let numberPage = [[${param.page}]];
+        let urlUpdate = '/mark/list/update';
+        if (numberPage != null ){
+        urlUpdate += "?page="+numberPage[0];
+        }
+        $("#tableMarks").load(urlUpdate);
         });
-
+        /*]]>*/
     </script>
     <div class="table-responsive">
         <table class="table table-hover" th:fragment="tableMarks" id="tableMarks">
@@ -128,7 +134,12 @@
                                 /*<![CDATA[*/
                                 $( "#resendButton"+ "[[${mark.id}]]").click(function() {
                                     $.get( "/mark/[[${mark.id}]]/noresend", function( data ) {
-                                        $("#tableMarks").load('/mark/list/update');
+                                        let numberPage = [[${param.page}]];
+                                        let urlUpdate = '/mark/list/update';
+                                        if ( numberPage != null ){
+                                            urlUpdate += "?page="+numberPage[0];
+                                        }
+                                        $("#tableMarks").load(urlUpdate);
                                     });
                                 });
                                 /*]]>*/
@@ -142,7 +153,12 @@
                                 /*<![CDATA[*/
                                 $( "#noresendButton"+ "[[${mark.id}]]" ).click(function() {
                                     $.get( "/mark/[[${mark.id}]]/resend", function( data ) {
-                                        $("#tableMarks").load('/mark/list/update');
+                                        let numberPage = [[${param.page}]];
+                                        let urlUpdate = '/mark/list/update';
+                                        if ( numberPage != null ){
+                                            urlUpdate += "?page="+numberPage[0];
+                                        }
+                                        $("#tableMarks").load(urlUpdate);
                                     });
                                 });
                                 /*]]>*/
@@ -157,9 +173,9 @@
             </tbody>
         </table>
     </div>
+    <footer th:replace="fragments/pagination"/>
 	<div th:if="${#lists.isEmpty(markList)}"> No marks </div>
 </div>
-
-
+<footer th:replace="fragments/footer"/>
 </body>
 </html>
